<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_playlist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/iv_video"
            android:layout_width="128dp"
            android:layout_height="72dp"
            android:background="@drawable/playlist_bg"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/trans"
            android:gravity="center"
            android:text="@string/playlist"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:maxLines="2"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_video_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/videos"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>